Fixed Padding Issues on Mobile

--- a/css/style.css
+++ b/css/style.css
@@ -711,7 +711,7 @@ text-decoration: none;
 }
 
 p {
-padding:20px 0;
+padding:20px 20px;
 }
 
 ol, ul {
